[DT-921] Add spotless formatting to code base (#2508)
Co-authored-by: Kevin Marete <kevinmmarete@gmail.com>